# bitcoin

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  SUPPORT.md  cleanup.sh  pyproject.toml  setup.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
bitcoin/: __init__.py  arithmetic.py  attack.py  batch.py  cli.py  coincurve_backend.py  config.py  der.py  ecc.py  ecc_backend.py  exceptions.py  extractor.py  fetcher.py  health.py  linear.py  models.py  parser.py  psbt.py  script.py  serializer.py  settings.py  sighash.py  signature.py  transaction.py  utils.py
bitcoin/cli/: __init__.py  app.py
bitcoin/curve/: __init__.py  batch.py  dispatch.py  libsecp256k1.py  operations.py  params.py  point.py
bitcoin/curve/backend/: __init__.py  base.py  libsec.py  native.py
bitcoin/descriptor/: __init__.py  analyzer.py  compiler.py
bitcoin/encoding/: __init__.py  binary.py  der.py  hasher.py  hex.py  sec.py  varint.py
bitcoin/field/: __init__.py  modular.py  sqrt.py
bitcoin/psbt/: __init__.py  editor.py  extraction.py  models.py  parser.py  pipeline.py
bitcoin/script/: __init__.py  builder.py  classifier.py  opcodes.py  parser.py  taproot.py
bitcoin/services/: __init__.py  blockchain.py  serializer.py
bitcoin/sighash/: __init__.py  flag.py  legacy.py  segwit.py  taproot.py
bitcoin/signature/: __init__.py  attack.py  batch_verify.py  check.py  collection.py  pipeline.py  record.py  schnorr.py  signer.py
bitcoin/signature/extraction/: __init__.py  engine.py  helpers.py  plugins.py
bitcoin/signature/linearization/: __init__.py  coefficients.py  engine.py
bitcoin/transaction/: __init__.py  builder.py  fee.py  models.py  parser.py  rbf.py  tx.py  tx_services.py
docs/: ALGORITHMS.md  API.md  ARCHITECTURE.md  BENCHMARKING.md  CONFIGURATION.md  DATA_FLOW.md  DEPENDENCIES.md  GLOSSARY.md  MODULES.md  TESTING.md  faq.md  getting-started.md
docs/schemas/: extraction.json  health.json
docs/source/: api.rst  conf.py  index.rst
tests/: conftest.py  test_attack.py  test_batch.py  test_benchmarks.py  test_cli.py  test_cli_coverage.py  test_concurrency.py  test_config.py  test_coverage_new.py  test_curve.py  test_descriptor.py  test_ecc.py  test_encoding.py  test_extraction.py  test_extraction_coverage.py  test_field.py  test_fuzzing.py  test_health.py  test_imports.py  test_linear.py  test_low_coverage_modules.py  test_mainnet.py  test_mainnet_vectors.py  test_misc_coverage.py  test_parse_tx.py  test_properties.py  test_psbt.py  test_psbt_new.py  test_psbt_parser.py  test_schnorr.py  test_serialization.py  test_serializer.py  test_sighash_full.py  test_signature_new.py  test_stateful.py  test_transaction.py  test_transaction_new.py
