[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin"
version = "0.4.0"
description = "Extract and linearize ECDSA and Schnorr signatures (r, s, z) from Bitcoin transactions with pure-Python secp256k1"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "secp contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["typer>=0.12,<1"]

[project.urls]
Homepage = "https://github.com/sachn-cs/bitcoin"
Repository = "https://github.com/sachn-cs/bitcoin"

[project.optional-dependencies]
coincurve = ["coincurve>=18,<19"]
dev = ["hypothesis>=6,<7", "pytest>=8,<9", "pytest-cov>=5,<6", "pytest-benchmark>=4,<5", "ruff>=0.4,<1", "mypy>=1.8,<2", "yapf>=0.40,<1", "pre-commit>=3,<4"]
all = ["bitcoin[coincurve,dev]"]

[project.scripts]
bitcoin = "bitcoin.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["bitcoin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", ".hypothesis", ".benchmarks", ".pytest_cache"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B"]

[tool.yapf]
based_on_style = "google"
column_limit = 88

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
